# StoryTeller

./: .env.example  .gitignore  AGENTS.md  ARCHITECTURE.md  LICENSE  PLAN.md  README.md  THIRD_PARTY_NOTICES.md  pyproject.toml
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md  SECURITY.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
apps/cli/: pyproject.toml
apps/cli/src/storyteller_cli/: __init__.py  _legacy.py  main.py
apps/pi/: pyproject.toml
apps/pi/src/storyteller_pi/: __init__.py  main.py
apps/web-admin/backend/: pyproject.toml
apps/web-admin/backend/src/storyteller_web_admin_backend/: __init__.py  jobs.py  legacy_app.py  main.py
apps/web-admin/frontend/: package.json  svelte.config.js
apps/web-admin/frontend/src/: app.html
apps/web-admin/frontend/src/lib/: ContentList.svelte  api.ts  worldFields.ts
apps/web-admin/frontend/src/routes/: +layout.svelte  +layout.ts  +page.svelte
apps/web-admin/frontend/src/routes/cost/: +page.svelte
apps/web-admin/frontend/src/routes/generate/: +page.svelte
apps/web-admin/frontend/src/routes/health/: +page.svelte
apps/web-admin/frontend/src/routes/saves/: +page.svelte
apps/web-admin/frontend/src/routes/settings/: +page.svelte
apps/web-admin/frontend/src/routes/transcripts/: +page.svelte
apps/web-admin/frontend/src/routes/transcripts/[name]/: +page.svelte
apps/web-admin/frontend/src/routes/worlds/[id]/: +page.svelte
apps/web-ui/backend/: pyproject.toml
apps/web-ui/backend/src/storyteller_web_ui_backend/: __init__.py  main.py
apps/web-ui/frontend/: .gitignore  package.json
apps/web-ui/frontend/src/: app.css  app.html
apps/web-ui/frontend/src/lib/: api.ts  theme.svelte.ts  ui.css
apps/web-ui/frontend/src/lib/components/: ChatLine.svelte  MicMeter.svelte  WorldCard.svelte
apps/web-ui/frontend/src/routes/: +layout.svelte  +layout.ts  +page.svelte
apps/web-ui/frontend/src/routes/create/: +page.svelte
apps/web-ui/frontend/src/routes/voice/: +page.svelte
config/: config.toml
data/voice_prompts/: manifest.json
data/worlds/: immerwald.en.json  immerwald.json  sternenfahrt.en.json  sternenfahrt.json
docker/: .dockerignore  .env.example  Caddyfile  Dockerfile.web  README.md  docker-compose.yml
docs/: ADMIN_GUIDE.md  SETUP_HTTPS.md  SETUP_LOCAL_AI_SERVER.md  SETUP_PC.md  SETUP_PI.md  USER_GUIDE.md
local_llm_servers_win/: Modelfile.qwen3-30b-32k  README.md  install-compnents.ps1  install.bat  run-server.ps1  start.bat  stop-server.ps1  stop.bat
scripts/: asoundrc.template  augment_seed_worlds.py  bake_voice_prompts.sh  build_frontends.sh  install_https.sh  install_netcheck.sh  install_services.sh  install_wakeword.sh  setup_bluetooth.sh  setup_system.sh  storyteller-admin.service  storyteller-netcheck.service  storyteller-web-ui.service  storyteller.service
src/storyteller/: __init__.py  cli.py  config.py  i18n.py  oai.py  runtime.py
src/storyteller/audio/: __init__.py  ambient.py  backend.py  player.py
src/storyteller/hardware/: __init__.py  leds.py  tuning.py
src/storyteller/menu/: __init__.py  voice_menu.py
src/storyteller/net/: __init__.py  onboarding.py  portal.py
src/storyteller/persistence/: __init__.py  saves.py
src/storyteller/story/: __init__.py  blueprint.py  cost.py  dynamics.py  engine.py  knowledge.py  moderation.py  rag.py  random_events.py  substory.py  transcript.py
src/storyteller/voice/: __init__.py  fx.py  prompts.py  stt.py  tts.py  waitloop.py  wakeword.py
src/storyteller/web/: __init__.py  app.py  jobs.py
src/storyteller/worlds/: __init__.py  generate.py  registry.py  schema.py  seed.py
tests/: test_admin_suggest_context.py  test_blueprint_variants.py  test_cancel_keywords.py  test_checkpoint_prune.py  test_config_overrides.py  test_cost_tracking.py  test_health.py  test_knowledge.py  test_pressure.py  test_smoke.py  test_synopsis_fold.py  test_transcript_cleanup.py  test_world_design.py  test_worlds_generate.py  test_worlds_lifecycle.py
tools/: switch-models  switch-models.py
