[project]
name = "storyteller-workspace"
version = "0.1.0"
description = "StoryTeller monorepo (core engine, voice, hardware, cli/pi/web apps)"
license = { file = "LICENSE" }
authors = [{ name = "marceld23", email = "marcel.duetscher@gmail.com" }]
requires-python = ">=3.13"
dependencies = [
    "storyteller-core",
    "storyteller-voice",
    "storyteller-hardware",
    "storyteller-cli",
    "storyteller-pi",
    "storyteller-web-ui-backend",
    "storyteller-web-admin-backend",
]

[tool.uv]
package = false

[tool.uv.workspace]
members = [
    "packages/core",
    "packages/voice",
    "packages/hardware",
    "apps/cli",
    "apps/pi",
    "apps/web-ui/backend",
    "apps/web-admin/backend",
]

[tool.uv.sources]
storyteller-core = { workspace = true }
storyteller-voice = { workspace = true }
storyteller-hardware = { workspace = true }
storyteller-cli = { workspace = true }
storyteller-pi = { workspace = true }
storyteller-web-ui-backend = { workspace = true }
storyteller-web-admin-backend = { workspace = true }
