[project]
name = "storyteller-workspace"
version = "0.1.0"
description = "StoryTeller monorepo (core engine, voice, hardware, cli/pi/web apps)"
license = { file = "LICENSE" }
authors = [{ name = "marceld23", email = "marcel.duetscher@gmail.com" }]
requires-python = ">=3.13"
dependencies = [
    "storyteller-core",
    "storyteller-voice",
    "storyteller-hardware",
    "storyteller-cli",
    "storyteller-pi",
    "storyteller-web-ui-backend",
    "storyteller-web-admin-backend",
]

[dependency-groups]
dev = [
    "pytest>=8",
    "ruff>=0.6",
    "mypy>=1.11",
]

[tool.uv]
package = false

[tool.ruff]
line-length = 100
target-version = "py313"
extend-exclude = ["apps/*/frontend", "**/.svelte-kit"]

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B"]
ignore = [
    "E501",   # line length handled pragmatically, not enforced hard
    "B008",   # FastAPI uses callable defaults (Form/Depends) by design
    "UP038",  # isinstance tuple form is fine
    "UP042",  # str+Enum is intentional (stable .value serialization)
]

[tool.ruff.lint.per-file-ignores]
# vendored Seeed ReSpeaker driver — keep upstream as-is (Apache-2.0)
"packages/hardware/src/storyteller_hardware/pixel_ring_v2.py" = ["B006"]
"packages/hardware/src/storyteller_hardware/tuning.py" = ["B006"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.mypy]
python_version = "3.13"
ignore_missing_imports = true
follow_imports = "silent"
check_untyped_defs = false
warn_unused_ignores = false

[tool.uv.workspace]
members = [
    "packages/core",
    "packages/voice",
    "packages/hardware",
    "apps/cli",
    "apps/pi",
    "apps/web-ui/backend",
    "apps/web-admin/backend",
]

[tool.uv.sources]
storyteller-core = { workspace = true }
storyteller-voice = { workspace = true }
storyteller-hardware = { workspace = true }
storyteller-cli = { workspace = true }
storyteller-pi = { workspace = true }
storyteller-web-ui-backend = { workspace = true }
storyteller-web-admin-backend = { workspace = true }
