[project]
name = "storyteller-cli"
version = "0.1.0"
description = "StoryTeller CLI app: PC text/voice REPL"
requires-python = ">=3.13"
dependencies = [
    "storyteller-core",
    "storyteller-voice",
    "storyteller-hardware",
    "rich>=13.7",
]

[project.scripts]
storyteller-cli = "storyteller_cli.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/storyteller_cli"]

[tool.uv.sources]
storyteller-core = { workspace = true }
storyteller-voice = { workspace = true }
storyteller-hardware = { workspace = true }
