[project]
name = "storyteller-pi"
version = "0.1.0"
description = "StoryTeller Pi app: full voice loop with ReSpeaker + LEDs + wake word"
requires-python = ">=3.13"
dependencies = [
    "storyteller-core",
    "storyteller-voice",
    "storyteller-hardware",
    "rich>=13.7",
]

[project.scripts]
storyteller-pi = "storyteller_pi.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/storyteller_pi"]

[tool.uv.sources]
storyteller-core = { workspace = true }
storyteller-voice = { workspace = true }
storyteller-hardware = { workspace = true }
