[project]
name = "storyteller-web-admin-backend"
version = "0.1.0"
description = "StoryTeller Web Admin backend: FastAPI JSON API"
requires-python = ">=3.13"
dependencies = [
    "storyteller-core",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "python-multipart>=0.0.9",
]

[project.scripts]
storyteller-web-admin = "storyteller_web_admin_backend.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/storyteller_web_admin_backend"]

[tool.uv.sources]
storyteller-core = { workspace = true }
