[project]
name = "storyteller-web-ui-backend"
version = "0.1.0"
description = "StoryTeller Web Play-UI backend: FastAPI + WebSocket"
requires-python = ">=3.13"
dependencies = [
    "storyteller-core",
    "storyteller-voice",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "websockets>=12.0",
    "python-multipart>=0.0.9",
]

[project.scripts]
storyteller-web-ui = "storyteller_web_ui_backend.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/storyteller_web_ui_backend"]

[tool.uv.sources]
storyteller-core = { workspace = true }
storyteller-voice = { workspace = true }
